# simple-clean-arch-fast-api-template

./: .gitignore  makefile  pyproject.toml
src/: application.py  main.py
src/domain/use_case/first_example/: first_example.py  ports.py
src/frameworks/fast_api/: manager.py
src/frameworks/requests/: manager.py
src/interface_adapters/api/v1/controllers/: first_controller_example.py
src/interface_adapters/api/v1/dtos/: first_example_dto.py
src/interface_adapters/api/v1/views/: first_example.py
src/interface_adapters/framework_services/interface/: requests.py
