[tool.poetry]
name = "simple-clean-arch-fast-api-template"
version = "1.0.0"
description = "A simple Fast API template"
authors = ["Diego Leal"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = "^1.9.1"}
fastapi = "^0.79.1"
fastapi-pagination = "^0.9.3"
slowapi = "^0.1.5"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
anyio = "^3.6.1"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.950"
pylint = "^2.13.9"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-tornasync = "^0.6.0"
pytest-trio = "^0.7.0"
pytest-twisted = "^1.13.4"
types-requests = "^2.27.27"
Twisted = "^22.4.0"
wily = "ˆ1.20.0"
requests = "^2.28.1"
types-python-dateutil = "^2.8.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_incomplete_defs = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
testpaths = ["tests"]

[tool.pylint]
init-hook = "import sys; sys.path.append('./src'), sys.path.append('./tests')"
fail-under = "9.5"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable = ["C0114", "C0116", "C0301", "R0903", "W1203"]


[tool.pylint.similarities]
ignore-imports = "yes"
min-similarity-lines = "6"

[tool.isort]
profile = "black"
